# AtomicVision

./: .gitignore  Dockerfile  MANIFEST.in  README.md  blog.md  openenv.yaml  pyproject.toml  pytest.ini  requirements.txt
atomicvision/: __init__.py
atomicvision_env/: __init__.py  client.py  models.py
docs/: cost-aware-masked-sft-results.md  experiment-lineage.md  grpo-continuation-smoke-eval.json  grpo-continuation-smoke-results.md  grpo-format-diagnostics-notes.md  hackathon-submission-checklist.md  hard-only-grpo-after-format-refresh-v12-metrics.json  hard-only-grpo-reference-probe-metrics.json  hard-only-grpo-reference-probe-results.md  hard-only-grpo-reference-probe-strictsubmit-v5-metrics.json  hard-only-grpo-reference-probe-strictsubmit-v5-results.md  hard-only-grpo-reference-probe-stripthink-main-v10b-metrics.json  hard-only-grpo-reference-probe-tagless-penalty-v11b-metrics.json  hard-only-grpo-sequence-bias-v13e-metrics.json  hard-only-grpo-structured-toolcall-v15-metrics.json  hard-recall-micro-repair-results.md  judge-writeup.md  phase-0-scope-lock.md  phase-1-system-design.md  phase-10-reward-comparison-and-colab.md  phase-11-finetuning-plan.md  phase-2-environment-contract.md  phase-3-synthetic-world.md  phase-4-rewards-and-metrics.md  phase-5-openenv-wrapper.md  phase-6-baselines-and-evaluation.md  phase-7-defectnet-lite.md  phase-8-model-prior-training.md  phase-9-huggingface-deployment.md  replay-mix-sft-continuation-metrics.json  replay-mix-sft-continuation-results.md  reward-comparison-report.md  training-runtime-runbook.md
notebooks/: README.md  (+1 more)
(+46 files in other folders)
