[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atomicvision-openenv"
version = "0.1.0"
description = "AtomicVision OpenEnv Space package for non-destructive atomic defect mapping."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Aditya Baskati" }
]
dependencies = [
  "openenv-core==0.2.3",
  "torch>=2.5,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
server = "atomicvision_env.server.run:main"
atomicvision-server = "atomicvision_env.server.run:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["atomicvision*", "atomicvision_env*"]
